Added some more tech pictures and updated others

--- a/localisation/english/EC_equipment_l_english.yml
+++ b/localisation/english/EC_equipment_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- ### tanks
+ ### GAL tanks ####
  
  GAL_light_tank_equipment_3:0 "Type 36 L-B"
  GAL_light_tank_equipment_3_short:0 "Type 36 L-B"
@@ -9,3 +9,13 @@
  GAL_medium_tank_equipment_1:0 "Type 36 M-A"
  GAL_medium_tank_equipment_1_short:0 "Type 36 M-A"
  #GAL_medium_tank_equipment_1_desc:0 "PLACEHOLDER"
+ 
+ ### IMP tanks ###
+ 
+ #IMP_medium_tank_equipment_1:0 "PLACEHOLDER"
+ #IMP_medium_tank_equipment_1_short:0 "PLACEHOLDER"
+ #IMP_medium_tank_equipment_1_desc:0 "PLACEHOLDER"
+ 
+ #IMP_light_tank_equipment_1:0 "PLACEHOLDER"
+ #IMP_light_tank_equipment_1_short:0 "PLACEHOLDER"
+ #IMP_light_tank_equipment_1_desc:0 "PLACEHOLDER"
