--- a/localisation/english/EC_focus_l_english.yml
+++ b/localisation/english/EC_focus_l_english.yml
@@ -1,3 +1,8 @@
 ﻿l_english:
- GAL_increase_army_size:0 "Increase Standing Army Size"
- GAL_increase_army_size_desc:0 "The looming threat the Empire poses can no longer be ignored.  Increasing the size of our standing army will leave us better prepared for an invasion of our land."
+ #Gallian Focus Tree
+GAL_increase_army_size:0 "Increase Standing Army Size"
+GAL_increase_army_size_desc:0 "The looming threat the Empire poses can no longer be ignored.  Increasing the size of our standing army will leave us better prepared for an invasion of our land."
+
+ #Imperial Focus Tree
+IMP_imperial_ambitions:0 "Imperial Ambitions"
+IMP_imperial_ambitions_desc:0 "The erroneously named Great Europan War "ended" in a cease fire 17 years ago, with no clear winner.  It's time we shed that legacy of shame, and end this war once and for all.  It will take a great deal of time and effort, but if we play our cards right, we'll be ready to unite all of Europa under the dual-headed eagle of the Empire!"
