--- a/localisation/english/EC_victory_points_l_english.yml
+++ b/localisation/english/EC_victory_points_l_english.yml
@@ -8,3 +8,4 @@
  VICTORY_POINTS_3152:0 "Hilwarsen"
  VICTORY_POINTS_83:0 "Ostend"
  VICTORY_POINTS_11080:0 "Ghirlandio"
+ VICTORY_POINTS_11186:0 "Hafen"
